Fixed layout bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,6 +27,7 @@ body {
 .asset-link{
   flex: 0 0 25%;
   height: 24rem;
+  max-width: 30rem;
   display: flex;
   flex-direction: column;
   align-items: center;
